[package]
name = "forest-relay-chain-inprocess-interface"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[dependencies]
async-trait = "0.1.58"
futures = "0.3.24"
futures-timer = "3.0.2"

# Substrate
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

# Selendra
selendra-cli = { git = "https://github.com/selendra/selendra", default-features = false, features = ["cli"] , branch = "master" }
selendra-client = { git = "https://github.com/selendra/selendra", branch = "master" }
selendra-service = { git = "https://github.com/selendra/selendra", branch = "master" }

# Forest
forest-primitives-core = { path = "../../primitives/core" }
forest-relay-chain-interface = { path = "../relay-chain-interface" }

[dev-dependencies]

# Substrate
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

# Selendra
selendra-primitives = { git = "https://github.com/selendra/selendra", branch = "master" }
selendra-test-client = { git = "https://github.com/selendra/selendra", branch = "master" }
metered = { package = "prioritized-metered-channel", version = "0.2.0" }

# Forest
forest-test-service = { path = "../../test/service" }
