[package]
name = "parachain-info"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"


[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }

forest-primitives-core = { path = "../../primitives/core", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"forest-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
