[package]
name = "forest-pallet-solo-to-para"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"
description = "Adds functionality to migrate from a Solo to a Parachain"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }

# Selendra
selendra-primitives = { git = "https://github.com/selendra/selendra", default-features = false, branch = "release-0.3.0" }

# Forest
forest-pallet-parachain-system = { default-features = false, path = "../parachain-system" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"forest-pallet-parachain-system/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-sudo/std",
	"selendra-primitives/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
