[package]
name = "forest-primitives-core"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }

# Substrate
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }

# Selendra
selendra-core-primitives = { git = "https://github.com/selendra/selendra", default-features = false, branch = "master" }
selendra-parachain = { git = "https://github.com/selendra/selendra", default-features = false, branch = "master" }
selendra-primitives = { git = "https://github.com/selendra/selendra", default-features = false, branch = "master" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
	"selendra-core-primitives/std",
	"selendra-parachain/std",
	"selendra-primitives/std",
]
