[package]
name = "forest-primitives-utility"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }
log = { version = "0.4.17", default-features = false }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }

# Selendra
xcm = { git = "https://github.com/selendra/selendra", default-features = false, branch = "master" }
xcm-executor = { git = "https://github.com/selendra/selendra", default-features = false, branch = "master" }
xcm-builder = { git = "https://github.com/selendra/selendra", default-features = false, branch = "master" }


# Forest
forest-primitives-core = { path = "../core", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
	"forest-primitives-core/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
]
