[package]
name = "forest-test-client"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }

# Substrate
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] , branch = "polkadot-v0.9.33" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] , branch = "polkadot-v0.9.33" }
sc-executor-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

# Selendra
selendra-primitives = { git = "https://github.com/selendra/selendra", branch = "release-0.3.0" }
selendra-parachain = { git = "https://github.com/selendra/selendra", branch = "release-0.3.0" }

# Forest
forest-test-runtime = { path = "../runtime" }
forest-test-service = { path = "../service" }
forest-test-relay-sproof-builder = { path = "../relay-sproof-builder" }
forest-primitives-core = { path = "../../primitives/core" }
forest-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }
