[package]
name = "forest-test-relay-validation-worker-provider"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"
build = "build.rs"

[dependencies]

# Selendra
selendra-node-core-pvf = { git = "https://github.com/selendra/selendra", branch = "master" }

[build-dependencies]
toml = "0.5.9"
