[package]
name = "forest-test-service"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[[bin]]
name = "test-parachain"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.58"
clap = { version = "4.0.22", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
criterion = { version = "0.4.0", features = [ "async_tokio" ] }
jsonrpsee = { version = "0.15.1", features = ["server"] }
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros"] }
tracing = "0.1.37"
url = "2.3.1"

# Substrate
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] , branch = "polkadot-v0.9.33" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-service = { git = "https://github.com/paritytech/substrate", features = [ "wasmtime" ] , branch = "polkadot-v0.9.33" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

# Selendra
selendra-primitives = { git = "https://github.com/selendra/selendra", branch = "release-0.3.0" }
selendra-service = { git = "https://github.com/selendra/selendra", branch = "release-0.3.0" }
selendra-test-service = { git = "https://github.com/selendra/selendra", branch = "release-0.3.0" }
selendra-cli = { git = "https://github.com/selendra/selendra", branch = "release-0.3.0" }

# Forest
forest-client-cli = { path = "../../client/cli" }
parachains-common = { path = "../../common" }
forest-client-consensus-common = { path = "../../client/consensus/common" }
forest-client-consensus-relay-chain = { path = "../../client/consensus/relay-chain" }
forest-client-network = { path = "../../client/network" }
forest-client-service = { path = "../../client/service" }
forest-primitives-core = { path = "../../primitives/core" }
forest-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }
forest-relay-chain-inprocess-interface = { path = "../../client/relay-chain-inprocess-interface" }
forest-relay-chain-interface = { path = "../../client/relay-chain-interface" }
forest-relay-chain-rpc-interface = { path = "../../client/relay-chain-rpc-interface" }
forest-test-relay-validation-worker-provider = { path = "../relay-validation-worker-provider" }
forest-test-runtime = { path = "../runtime" }
forest-relay-chain-minimal-node = { path = "../../client/relay-chain-minimal-node" }

[dev-dependencies]
futures = "0.3.24"
portpicker = "0.1.1"

# Selendra dependencies
selendra-test-service = { git = "https://github.com/selendra/selendra", branch = "release-0.3.0" }

# Substrate dependencies
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

[[bench]]
name = "transaction_throughput"
harness = false
